<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Loyalty Pays</string>
    <string name="action_settings">Settings</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="slogan">Be rewarded for your Loyalty</string>
    <string name="title_activity_settings">Settings</string>
    <string name="logout_full">Log out of LoyaltyPays</string>
    <string name="progress_card_type_delete">Log out of LoyaltyPays</string>
    <string name="post_card_type">Post Loyalty Card</string>
    <string name="progress_posting_card_type">Posting&#8230;</string>

    <string name="post_retailer_label">Update Loyalty Details</string>
    <string name="post_purchase_label">Add a Purchase</string>
    <string name="post_discount_label">Send a Coupon</string>

    <string name="edit_loyalty_card">Edit</string>
    <string name="delete_loyalty_card">Delete</string>
    <string name="send_coupon_to_card">Send Coupon</string>

    <string name="register_with_retailer_prompt">Register with retailers to view your loyalty cards</string>
    <string name="add_new_loyalty_card">Add a new loyalty card or Promotion</string>
    <string name="add_new_purchase">Add a Purchase</string>

    <string name="post_button_text">Post</string>
    <string name="name_post">Name</string>
    <string name="location_post">Location (Country:City)</string>
    <string name="terms_post">Terms and Conditions</string>

    <string name="purchase_card_id">Card id</string>
    <string name="purchase_item">Item being purchased</string>
    <string name="purchase_amount_hint">Amount</string>

    <string name="discount_name_prompt">Discount Name</string>
    <string name="discount_description_prompt">Describe the offer</string>
    <string name="discount_min_point">Set a minimum points</string>

    <string name="parse_application_id">SMtBgErC8ttG0s38g9agFUcfxOT7ywzNhCeHrE5j</string>
    <string name="parse_client_key">l7KmzIae6DFJ2tGfcgV7convA5iyvs0OsXU4yimb</string>
    <string name="select_country">Select Country</string>

    <string-array name="country_array">
        <item>India:Bangalore</item>
        <item>India:Delhi</item>
        <item>USA:NY</item>
        <item>USA:Atlanta</item>
        <item>Australia:Sydney</item>
        <item>Australia:Melbourne</item>
     </string-array>

    <string-array name="landing_page_options">
        <item >
            @string/option_view_registered_retailers
        </item>
        <item >
            @string/option_register_with_retailer
        </item>
        <item >
            @string/option_view_promotions
        </item>
        <item >
            @string/option_usage_history
        </item>

    </string-array>

    <string name="option_register_with_retailer">Register me with a retailer</string>
    <string name="option_view_registered_retailers">My registered retailers</string>
    <string name="option_view_promotions">Promotions &amp; Deals</string>
    <string name="option_usage_history">My usage history</string>
    <string name="option_my_deals">My deals</string>

</resources>